# verboten

./: .gitignore  Cargo.toml  README.md  bld.ps1
src/: appstate.rs  args.rs  err.rs  loglevel.rs  main.rs  service.rs  termsig.rs
